syntax = "proto3";

package rdboperatorproto;

option go_package = ".;protobuf";
option optimize_for = SPEED;
/*
	Generate the Go code from the events.proto file using the protobuf folder as the output destination:
	'protoc -I=./protobuf --go_out=plugins=grpc:./protobuf ./protobuf/rdboperator.proto'
*/


message RecordSet {
    repeated string records = 1; // Each record is a JSOn string
}

message RDBQuery {
    string database_name = 2;
    string collection_name = 3;
    string query = 4; // the nosql query string
}

message Empty {}

service RecordQueryService {
    rpc GetRDBRecords(RDBQuery) returns (RecordSet){}
    //rpc GetRDBRecordsStream(RDBQuery) returns (stream RecordSet){} // events in a given query, record to record
}